-- Version 2.18.1, released ...

 * You can now drag and drop .world files onto the WorldPainter window to open them
 * Bug fix: fixed a NullPointerException that occurred when loading some older worlds
 * Bug fix: fixed an error when trying to Export a world that has Combined Layers which contain non-custom layers (e.g. Frost)

-- Version 2.18.0, released 11-6-2023

 * Height map and mask import changes:
   + Floating point images are now supported for height maps and masks
   + 32-bit unsigned integer images are now supported for masks (they already were for height maps)
   + When opening the screen, the file selection dialog is now immediately shown
 * Custom Layers tab on the Export screen:
   + It now shows the constituent layers of Combined Layers, instead of the Combined Layers themselves
   + A "select" button has been added to allow selection of the layer from the map with the eyedropper
 * It is now possible to add a Nether or End dimension to Imported worlds
 * Crimson and Warped stems and hyphae are now treated as "logs" for purposes of leaf distance calculations
 * Some small usability improvements
 * Bug fix: selecting a paint from the map from the Global Operations screen now works more than once
 * Bug fix: selecting a paint from the map does not crash inside the selection (or when other system layers are present)
 * Bug fix: Merging a world that was not Imported will no longer cause it to be considered an Imported world afterwards
 * Bug fix: fix a crash on the Export screen related to the sorting of Combined Layers
 * Bug fix: fix a crash when Importing a map with an End dimension

-- Version 2.17.2, released 21-5-2023

 * The Eyedropper is now also available for selecting paints for the operations on the Global Operations screen
 * Bug fix: the Flatten tool no longer allows you to initiate it outside the bounds of the world
 * Small usability improvement

-- Version 2.17.1, released 13-5-2023
